<resources>
    <string name="app_name">Weather</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_longitude">Longitude</string>
    <string name="text_refresh">Refresh</string>

    <string name="text_menu_current">Current Forecast</string>
    <string name="text_menu_daily">Daily Forecast</string>
    <string name="text_menu_settings">Settings</string>
    <string name="text_menu_about">About</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="text_pref_auto_location">Find location automatically</string>
    <string name="text_pref_summary_auto_location_off">Enter location manually.</string>
    <string name="text_pref_summary_auto_location_on">Use a location service to find position.</string>

    <string name="text_pref_curr_location">Current location</string>
    <string name="text_pref_set_location">Set location</string>
    <string name="text_pref_custom_latitude">Latitude</string>
    <string name="text_pref_custom_longitude">Longitude</string>
    <string name="text_pref_title_unit">Units</string>
    <string name="text_pref_summary_metric">Metric (°C, metres etc.)</string>
    <string name="text_pref_summary_imperial">Imperial (°F, feet etc.)</string>
    <array name="array_pref_unit">
        <item>Metric (Default)</item>
        <item>Imperial</item>
    </array>
    <array name="array_pref_unit_values">
        <item>Metric (Default)</item>
        <item>Imperial</item>
    </array>
    <string name="text_pref_unit_default">Metric (Default)</string>
    <string name="text_pref_title_api_key">Dark Sky API Key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
