<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/top_menu"
        android:checkableBehavior="single">
        <item android:id="@+id/menu_current"
            android:title="@string/text_menu_current"
            android:icon="@drawable/ic_sun"
            />
        <item android:id="@+id/menu_daily"
            android:title="@string/text_menu_daily"
            android:icon="@drawable/ic_today"
            />
    </group>
    <group android:id="@+id/bottom_menu"
        android:checkableBehavior="single">
        <item android:id="@+id/menu_settings"
            android:title="@string/text_menu_settings"
            android:icon="@drawable/ic_settings"
            />
        <item android:id="@+id/menu_about"
            android:title="@string/text_menu_about"
            android:icon="@drawable/ic_info"
            />
    </group>
</menu>